# CWR

./: CMakeLists.txt  README.md  build.bat  vcpkg.json
apps/tools/GameEditor/: CMakeLists.txt  EditorEntity.cpp  EditorEntity.hpp  EditorScene.cpp  EditorScene.hpp  GameEditorApp.cpp  GameEditorApp.hpp  README.md  main.cpp
apps/tools/GameEditor/scripts/: obj2p3d.py
apps/tools/Studio/: CMakeLists.txt  MissionEditor.cpp  MissionEditor.hpp  StudioApp.cpp  StudioApp.hpp
docs/: RENDERING_MATH.md
engine/Poseidon/Dev/Debug/: DebugOverlay.cpp  DebugOverlay.hpp
engine/Poseidon/Graphics/Core/: Engine.hpp
engine/Poseidon/Graphics/Rendering/Shape/: ClipShape.cpp
engine/Poseidon/World/Scene/: Object.cpp  Scene.cpp  SceneDraw.cpp
engine/PoseidonGL33/: EngineGL33_2D.cpp  EngineGL33_Shaders.cpp
tests/unit/engine/Poseidon/Graphics/Rendering/: test_shape.cpp
tests/unit/engine/Poseidon/UI/Settings/: test_presentation_single_entry.cpp
tests/unit/engine/Poseidon/World/Scene/: test_object.cpp
